--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ Pathfinder = "b1d3bc72-d0e7-4279-b92f-7fa5d6d2d454"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SliceSampling = "43f4d3e8-9711-4a8c-bd1b-03ac73a255cf"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
