--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
+AbstractPPL = "7a57a42e-76ec-4ea3-a279-07e840d6d9cf"
 AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 AdvancedMH = "5b7e9947-ddc0-4b3f-9b55-0d8042f74170"
 BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
